--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "mysql2": "^2.3.3",
+    "npm": "^8.11.0",
     "sequelize": "^6.20.0",
     "socket.io": "^4.5.1"
   },
