--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/AgentA12/Chatting-App#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
     "npm": "^8.11.0",
     "sequelize": "^6.20.0",
