--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
+    "node-fetch": "^2.6.7",
     "npm": "^8.12.0",
     "sequelize": "^6.20.0",
     "socket.io": "^4.5.1"
