--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "livechatapp",
+  "name": "DevHangout",
   "version": "1.0.0",
   "description": "An application where users can talk to each other live.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "seeds": "node seeds/index.js"
   },
   "repository": {
